--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -32,4 +32,4 @@ jobs:
           pipenv install --deploy --dev
       - name: Run test suite
         run: |
-          pipenv run test
+          pipenv run test -v >> $GITHUB_OUTPUT
