--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,7 +17,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pipenv pylint
+    - name: Install dependencies
+      run: |
+        pipenv install --deploy --dev
     - name: Analysing the code with pylint
       run: |
         pylint --fail-under 8 $(git ls-files '*.py')
