--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,10 +17,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pipenv pylint
+        pip install pipenv
     - name: Install dependencies
       run: |
         pipenv install --deploy --dev
     - name: Analysing the code with pylint
       run: |
+        pipenv shell
         pylint --fail-under 8 $(git ls-files '*.py')
