--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,8 +20,7 @@ jobs:
         pip install pipenv
     - name: Install dependencies
       run: |
-        pipenv install --deploy --dev
+        pipenv install --dev --system
     - name: Analysing the code with pylint
       run: |
-        pipenv shell
         pylint --fail-under 8 $(git ls-files '*.py')
