--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pipenv
-        pipenv install --system
+        pipenv install --system --dev
     - name: Analysing the code with pylint
       run: |
         pylint --fail-under 8 $(git ls-files '*.py')
